# The dummy program forces autoconf to define $(CXXCOMPILE), which we
# need to create the precompiled headers properly
bin_PROGRAMS = dummy
dummy_SOURCES = dummy.cpp

# This is the real point of the Makefile -- autogenerate package
# includes and precompile them while we're at it
BUILT_SOURCES = \
	util_impl.h util_impl.h.gch \
	core_impl.h core_impl.h.gch \
	scheduler_impl.h scheduler_impl.h.gch \
	stages_impl.h stages_impl.h.gch

CLEANFILES = $(BUILT_SOURCES)

.SUFFIXES = .h .gch

# The official lists of public includes. The .h file will be generated
# automagically based on these.
UTIL_H = \
	util/c_str.h \
	util/exception.h \
	util/fnv.h \
	util/guard.h \
	util/hash_functions.h \
	util/namespace.h \
	util/static_hash_map.h \
	util/stopwatch.h \
	util/sync.h \
	util/thread.h \
	util/time.h \
	util/tmpfile.h \
	util/trace.h

CORE_H = \
	core/cpu_bind.h \
        core/dispatcher.h \
        core/functors.h \
        core/packet.h \
        core/stage.h \
        core/stage_container.h \
        core/tuple.h \
        core/tuple_fifo.h

SCHED_H = \
        scheduler/cpu.h \
        scheduler/cpu_set.h \
        scheduler/policy.h \
        scheduler/policy_os.h \
        scheduler/policy_query_cpu.h \
        scheduler/policy_rr_cpu.h \
        scheduler/policy_rr_module.h

STAGES_H = \
        stages/aggregate.h \
        stages/bnl_in.h \
        stages/bnl_join.h \
        stages/fdump.h \
        stages/fscan.h \
        stages/func_call.h \
        stages/hash_join.h \
        stages/iprobe.h \
        stages/iscan.h \
        stages/merge.h \
        stages/partial_aggregate.h \
        stages/sort.h \
        stages/sorted_in.h \
        stages/tscan.h \
        stages/tuple_source.h

%.h.gch: %.h
	$(CXXCOMPILE) -x c++ -c -o $@ $<

util_impl.h: $(UTIL_H)
	rm -f $@
	echo "// DO NOT MODIFY -- AUTOMATICALLY GENERATED BY MAKEFILE" >> $@
	BASE="__$(basename $@)_H"; echo -ne "#ifndef $$BASE\n#define $$BASE\n\n" >> $@
	echo -e $(foreach H, $^, "\n#include \"$(H)\"") >> $@
	echo -e "\n#endif" >> $@

core_impl.h: $(CORE_H)
	rm -f $@
	echo "// DO NOT MODIFY -- AUTOMATICALLY GENERATED BY MAKEFILE" >> $@
	BASE="__$(basename $@)_H"; echo -ne "#ifndef $$BASE\n#define $$BASE\n\n" >> $@
	echo -e $(foreach H, $^, "\n#include \"$(H)\"") >> $@
	echo -e "\n#endif" >> $@

scheduler_impl.h: $(SCHED_H)
	rm -f $@
	echo "// DO NOT MODIFY -- AUTOMATICALLY GENERATED BY MAKEFILE" >> $@
	BASE="__$(basename $@)_H"; echo -ne "#ifndef $$BASE\n#define $$BASE\n\n" >> $@
	echo -e $(foreach H, $^, "\n#include \"$(H)\"") >> $@
	echo -e "\n#endif" >> $@

stages_impl.h: $(STAGES_H)
	rm -f $@
	echo "// DO NOT MODIFY -- AUTOMATICALLY GENERATED BY MAKEFILE" >> $@
	BASE="__$(basename $@)_H"; echo -ne "#ifndef $$BASE\n#define $$BASE\n\n" >> $@
	echo -e $(foreach H, $^, "\n#include \"$(H)\"") >> $@
	echo -e "\n#endif" >> $@
