# -*- makefile -*-
#SUBDIRS = stages

INCLUDES = -I$(top_srcdir)/include -I$(top_srcdir)/include/stages
# encapsulates all basic classes needed in qpipe
lib_LIBRARIES = libstages.a

libstages_a_SOURCES = aggregate.cpp #hash_join.cpp

# define programs here
#bin_PROGRAMS = test_hash_join_stage
#test_hash_join_stage_SOURCES = hash_join_stage.cpp test


