# -*- makefile -*-


INCLUDES = -I$(top_srcdir)/include

lib_LIBRARIES = libstages.a
libstages_a_SOURCES = \
   fscan.cpp \
   fdump.cpp \
   tscan.cpp \
   iscan.cpp \
   iprobe.cpp \
   aggregate.cpp \
   partial_aggregate.cpp \
   sorted_in.cpp \
   hash_join.cpp \
   func_call.cpp \
   merge.cpp \
   sort.cpp \
   bnl_join.cpp \
   bnl_in.cpp
